refactor: changed project to use postgres database, base62 to generate shortURL and more

--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -1,13 +1,15 @@
 version: '3'
 
 services:
-  mongo:
-    image: mongo
+  postgres:
+    image: postgres
+    container_name: server-postgresql-container
     restart: always
-    container_name: server-mongo-container
     ports:
-      - "27017:27017"
+      - "5432:5432"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: shortly
-      MONGO_INITDB_ROOT_PASSWORD: shortly
-      
+      POSTGRES_USER: shortly
+      POSTGRES_PASSWORD: shortly
+      POSTGRES_DB: shortener
+    volumes:
+      - "./.docker/postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql"
